# pathways-utils

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_wheel.yml  main.yml  publish.yml  test.yml
pathwaysutils/: CHANGELOG.md  __init__.py  _initialize.py  cloud_logging.py  collect_profile.py  lru_cache.py  plugin_executable.py  profiling.py  proxy_backend.py  reshard.py
pathwaysutils/debug/: __init__.py  watchdog.py
pathwaysutils/elastic/: README.md  elastic.py  manager.py  reshard.py  simulated_manager.py
pathwaysutils/experimental/: concatenate_by_mesh_axis.py  profiling.py  reshard.py  split_by_mesh_axis.py
pathwaysutils/experimental/gke/: README.md  __init__.py  jobset.py
pathwaysutils/experimental/remote_ide/: remote_ide.py  remote_ide_test.py
pathwaysutils/experimental/shared_pathways_service/: README.md  deploy_pathways_service.py  gke_utils.py  isc_pathways.py  metrics_collector.py  run_connect_example.py  run_tpu_workload.py  run_workload.py  start_vscode_on_cpu_np.py  tpu_specs.py  (+1 more)
pathwaysutils/google_internal/: utils.py
pathwaysutils/interactive/: pathwaysjob-interactive.yaml
pathwaysutils/jax/: __init__.py
pathwaysutils/managed_pathways_service/: __init__.py  pw-cluster.yaml  pw-proxy.yaml  run_connect_example.py  tpu_manager.py
pathwaysutils/persistence/: helper.py  orbax_handler.py  pathways_orbax_handler.py
pathwaysutils/sidecar/: README.md
pathwaysutils/test/: __init__.py  initialize_test.py  lru_cache_test.py  pathwaysutils_test.py  persistence_test.py  plugin_executable_test.py  profiling_test.py  proxy_backend_test.py  reshard_test.py
(+26 files in other folders)
